--- a/index.html
+++ b/index.html
@@ -1,1 +1,45 @@
+<!DOCTYPE html>
+<html lang="zh-CN">
+<head>
+    <meta charset="UTF-8">
+    <title>MarumaruGo5</title>
+    <style>
+        .product {
+            margin: 20px;
+            border: 1px solid #ddd;
+            padding: 10px;
+            display: inline-block;
+        }
+        .product img {
+            width: 100px; /* 可以根据需要调整图片大小 */
+            height: auto;
+            display: block;
+            margin-bottom: 10px;
+        }
+        .product a {
+            text-decoration: none;
+            color: black;
+            display: block;
+        }
+    </style>
+</head>
+<body>
 
+<div class="product">
+    <a href="http://marumarugo5.github.io/ttshirt" target="_blank">
+        <img src="path/to/your/image1.jpg" alt="商品1">
+        T-shirt
+    </a>
+</div>
+
+<div class="product">
+    <a href="http://example.com/product2" target="_blank">
+        <img src="path/to/your/image2.jpg" alt="商品2">
+        bag
+    </a>
+</div>
+
+<!-- 可以根据需要添加更多商品 -->
+
+</body>
+</html>
