--- a/index.html
+++ b/index.html
@@ -27,14 +27,14 @@
 
 <div class="product">
     <a href="http://marumarugo5.github.io/ttshirt" target="_blank">
-        <img src="path/to/your/image1.jpg" alt="商品1">
+        <img src="tshirt1.jpg" alt="商品1">
         T-shirt
     </a>
 </div>
 
 <div class="product">
     <a href="http://example.com/product2" target="_blank">
-        <img src="path/to/your/image2.jpg" alt="商品2">
+        <img src="bag1.jpg" alt="商品2">
         bag
     </a>
 </div>
