--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
 </div>
 
 <div class="product">
-    <a href="http://example.com/product2" target="_blank">
+    <a href="http://marumarugo5.github.io/stbag" target="_blank">
         <img src="./bag1.jpg" alt="商品2">
         bag
     </a>
