--- a/index.html
+++ b/index.html
@@ -27,14 +27,14 @@
 
 <div class="product">
     <a href="http://marumarugo5.github.io/ttshirt" target="_blank">
-        <img src="./tshirt1.jpg" alt="商品1">
+        <img src="./tshirt1.JPG" alt="商品1">
         T-shirt
     </a>
 </div>
 
 <div class="product">
     <a href="http://marumarugo5.github.io/stbag" target="_blank">
-        <img src="./bag1.jpg" alt="商品2">
+        <img src="./bag1.JPG" alt="商品2">
         bag
     </a>
 </div>
