--- a/index.html
+++ b/index.html
@@ -128,7 +128,7 @@
 <!-- Header with brand logo and title -->
 <div class="header">
     <img src="title.jpg" alt="Brand Logo">
-    <h1 class="header-title">凡凡五</h1>
+    <h1 class="header-title">Marumarugo</h1>
 </div>
 
 <div class="product-list">
