--- a/index.html
+++ b/index.html
@@ -127,7 +127,7 @@
 
 <!-- Header with brand logo and title -->
 <div class="header">
-    <img src="title.jpg" alt="Brand Logo">
+    <img src="title1.jpg" alt="Brand Logo">
     <h1 class="header-title">Marumarugo</h1>
 </div>
 
